--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "antler-desktop",
   "version": "1.0.0",
-  "description": "",
+  "description": "drunkdeer-antler desktop",
   "main": "main.js",
   "scripts": {
-    "start": "npx webpack && electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "Arisa Okamoto",
   "license": "MIT",
@@ -12,12 +14,19 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
+    "@electron-forge/cli": "^7.2.0",
+    "@electron-forge/maker-deb": "^7.2.0",
+    "@electron-forge/maker-rpm": "^7.2.0",
+    "@electron-forge/maker-squirrel": "^7.2.0",
+    "@electron-forge/maker-zip": "^7.2.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "babel-loader": "^9.1.3",
     "electron": "^28.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.2"
